[package]
name = "rainfrog"
version = "0.1.4"
edition = "2021"
rust-version = "1.79"
description = "a database management tui for postgres"
repository = "https://github.com/achristmascarl/rainfrog"
homepage = "https://rainfrog.dev"
authors = ["achristmascarl <carl@rainfrog.dev>"]
build = "build.rs"
license = "MIT"

[profile.dev]
opt-level = 2 # very slow on 1, basically as fast as --release on 2

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.2"
config = "0.14.0"
crossterm = { version = "0.28.0", features = ["libc", "serde", "event-stream", "bracketed-paste"] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.28"
human-panic = "1.2.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
pretty_assertions = "1.4.0"
ratatui = { version = "0.28.0", features = ["serde", "macros", "unstable-widget-ref"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
signal-hook = "0.3.17"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "ipnetwork" ] }
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
chrono = { version = "0.4", default-features = false }
chrono-tz = { version = "0.5", default-features = false }
indexmap = "2.2.6"
tui-textarea = { version = "0.6.1", features = ["search"] } 
sqlparser = "0.49.0"
arboard = { version = "3.4.0", optional = true } 

[build-dependencies]
vergen = { version = "8.2.6", features = [ "build", "git", "gitoxide", "cargo" ]}

[features]
default = ["dep:arboard"]
termux = []

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.20.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "achristmascarl/tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc", "i686-unknown-linux-gnu", "aarch64-linux-android"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = true
